--- a/PetDatingSystem/webapp/WEB-INF/resources/styles/style.css
+++ b/PetDatingSystem/webapp/WEB-INF/resources/styles/style.css
@@ -18,19 +18,30 @@ footer {
 	padding: 50px;
 }
 
-/* Login Page Starts Here*/
-#loginForm {
+a {
+	color: blue;
+}
+
+a:active {
+	color: red;
+}
+
+#loginForm, #registerForm {
 	margin: 50px auto;
 	width: 300px;
 }
-/* Login Page Style Ends Here*/
-#spacer {
+
+.spacer {
 	margin: 10px;
 	clear: both;
 }
 
 .error {
 	color: red;
+}
+
+.success {
+	color: green;
 }
 
 .animal {
@@ -42,6 +53,7 @@ footer {
 
 .animal-image {
 	width: 110px;
+	height: 110px;
 }
 
 .city {
